src/app/globals.css
@layer reset, base, tokens, recipes, utilities;
@import "@tabler/core/dist/css/tabler.min.css";

:root {
  --foreground-rgb: 64, 71, 86;
  --background-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 64, 71, 86;
    --background-rgb: 255, 255, 255;
  }
}

html,
body {
  width: 100vw;
  height: 100vh;
  @supports (width: 100dvw) {
    width: 100dvw;
    height: 100dvh;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: rgb(var(--background-rgb));
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

input,
textarea,
[contenteditable="true"],
[contenteditable=""] {
  user-select: text;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
}

a {
  color: inherit;
  text-decoration: none;
}

